fix .navbar-toggler spacings when it's the first or last visible navbar element

--- a/src/sass/navbar/components/_toggler.scss
+++ b/src/sass/navbar/components/_toggler.scss
@@ -12,4 +12,15 @@
 		margin-left: 0;
 	}
 
+	// FIRST CHILD, LAST CHILD BREAKPOINTS
+	@each $breakpoint in map-keys($grid-breakpoints) {
+		@include media-breakpoint-up($breakpoint) {
+			&.first-child-#{$breakpoint} {
+				padding-left: 0;	
+			}
+			&.last-child-#{$breakpoint} {
+				padding-right: 0;
+			}
+		}
+	}
 }
